--- a/src/components/AddIfButton/AddIfButton.module.scss
+++ b/src/components/AddIfButton/AddIfButton.module.scss
@@ -1,3 +1,25 @@
 .wrapper {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
 
+  .button {
+    padding: 10px 20px;
+    outline: none;
+    cursor: pointer;
+    color: black;
+    background-color: #dcdcdc;
+    border: 1px solid #949494;
+    border-radius: 5px;
+    
+    span {
+      background-color: #378a1b;
+      color: #ffffff;
+      font-weight: bold;
+      padding: 3px 5px;
+      border-radius: 5px;
+      border: 1px solid #949494;
+      margin: 0 3px;
+    }
+  }
 }
