--- a/src/index.scss
+++ b/src/index.scss
@@ -9,8 +9,8 @@
 
 .wrapper {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
   height: 100vh;
   padding: 20px;
 }
