--- a/src/components/ui/VarNameButton/VarNameButton.module.scss
+++ b/src/components/ui/VarNameButton/VarNameButton.module.scss
@@ -7,4 +7,9 @@
   padding: 5px 10px;
   cursor: pointer;
   border-radius: 5px;
+
+  &:hover {
+    background-color: #96e74b;
+    transition: .3s;
+  }
 }
